--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@langchain/core": "^0.3.72",
     "@langchain/langgraph": "^0.4.6",
     "@langchain/langgraph-sdk": "^0.0.109",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
